--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@ body, html {
 <!-- Promo Section "Statistics" -->
 <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
   <div class="w3-quarter">
-    <span class="w3-xxlarge">14+</span>
-    <br>Partners
+    <span class="w3-xxlarge">2,192</span>
+    <br>Hitmen
   </div>
   <div class="w3-quarter">
     <span class="w3-xxlarge">55+</span>
