--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@ body, html {
 <!-- Promo Section "Statistics" -->
 <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
   <div class="w3-quarter">
-    <span class="w3-xxlarge">2,192</span>
-    <br>Hitmen
+    <span class="w3-xxlarge">2,000+</span>
+    <br>Hitmen for hire
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">55+</span>
-    <br>Projects Done
+    <span class="w3-xxlarge">37,018+</span>
+    <br>Contracts completed
   </div>
   <div class="w3-quarter">
     <span class="w3-xxlarge">89+</span>
