--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@ body, html {
     <br>Contracts completed
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">89+</span>
+    <span class="w3-xxlarge">25,018+</span>
     <br>Happy Clients
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">150+</span>
-    <br>Meetings
+    <span class="w3-xxlarge">$576,017</span>
+    <br>made in profit
   </div>
 </div>
 
