--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ body, html {
           <span class="w3-opacity">per month</span>
         </li>
         <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
+          <button class="w3-button w3-black w3-padding-large"><a href="#contact"Sign Up</button>
         </li>
       </ul>
     </div>
@@ -296,7 +296,7 @@ body, html {
           <span class="w3-opacity">per month</span>
         </li>
         <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
+          <button class="w3-button w3-black w3-padding-large"><a href="#contact">Sign Up</a></button>
         </li>
       </ul>
     </div>
@@ -312,7 +312,7 @@ body, html {
           <span class="w3-opacity">per month</span>
         </li>
         <li class="w3-light-grey w3-padding-24">
-          <button class="w3-button w3-black w3-padding-large">Sign Up</button>
+          <button class="w3-button w3-black w3-padding-large"><a href="#contact">Sign Up</a></button>
         </li>
       </ul>
     </div>
