--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ body, html {
       <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
       <p>
-        <button class="w3-button w3-black" onclick="" type="submit">
+        <button class="w3-button w3-black" onclick="alert('You though this would work? Go kill someone yourself.')" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
       </p>
