--- a/index.html
+++ b/index.html
@@ -244,8 +244,7 @@ body, html {
       <h3>Our Statistics.</h3>
       <p>The following statistics are from customer reviews and surveys that we <br>
       take periodically. </p>
-      <p></p><br>
-      tempor incididunt ut l</p>
+      <p>We take pride in giving you the truth about our service.</p><br>
     </div>
     <div class="w3-col m6">
       <p class="w3-wide"><i class=""></i>Customer Satisfaction</p>
