--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ body, html {
     </div>
     <div class="w3-col m6">
       <img class="w3-image w3-round-large" src="/images/intad.jpg" alt="int ad" width="700" height="394">
+      <iframe width="280" height="155" src="https://www.youtube.com/embed/oNHp0Ru-Zlg?si=OFaRj4_ov8j0aC0D" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </div>
 </div>
