--- a/index.html
+++ b/index.html
@@ -110,29 +110,33 @@ body, html {
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>[Insert mission statement below]</h3>
-      <p><br></p>
-      <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"></i> View Our Works</a></p>
+      <h3>[Insert missio</h3>
+      <p>It's common knowledge that the <i>Dark Web</i> isn't the safest place to buy things.
+         Your personal info get's leaked, the feds arrest you, so many unwanted consequences! That's 
+         where we come in. HitCo is the leader in safety when it comes to hiring contract killers. We
+         keep your information on the normal web, where it can't be stolen as easily, but still providing
+         better access than our competitors.</p>
+      <p><a href="#reviews" class="w3-button w3-black"><i class="fa fa-th"></i> Reviews</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="/images/intad.jpg" alt="int ad" width="700" height="394">
+      <img class="w3-image w3-round-large" src="/images/IntAd.jpg" alt="int ad" width="700" height="394">
       <iframe width="500" height="350" src="https://www.youtube.com/embed/oNHp0Ru-Zlg?si=OFaRj4_ov8j0aC0D" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
   </div>
 </div>
 
 <!-- Team Section -->
-<div class="w3-container" style="padding:128px 16px" id="team">
-  <h3 class="w3-center">THE TEAM</h3>
-  <p class="w3-center w3-large">The ones who runs this company</p>
+<div class="w3-container" style="padding:128px 16px" id="reviews">
+  <h3 class="w3-center">Pleased Customers</h3>
+  <p class="w3-center w3-large">The ones who spent too much money</p>
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
         <img src="/w3images/team2.jpg" alt="John" style="width:100%">
         <div class="w3-container">
-          <h3>John Doe</h3>
-          <p class="w3-opacity">CEO & Founder</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <h3>John Raymond</h3>
+          <p class="w3-opacity">Coder Dude</p>
+          <p>REVIEW HERE</p>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
         </div>
       </div>
