--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ body, html {
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>[Insert missio</h3>
+      <h3>Our Mission</h3>
       <p>It's common knowledge that the <i>Dark Web</i> isn't the safest place to buy things.
          Your personal info get's leaked, the feds arrest you, so many unwanted consequences! That's 
          where we come in. HitCo is the leader in safety when it comes to hiring contract killers. We
