--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ body, html {
       <p>By filling out the form at the bottom of this website, or dialing our hot line (248-434-5508), </p>
     </div>
     <div class="w3-quarter">
-      <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Passion</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      <i class="fa fa-money w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Payments</p>
+      <p>Based on your chosen target's social status, fame, and overall importance to the world, we will identify their price.</p>
     </div>
     <div class="w3-quarter">
-      <i class="fa fa-diamond w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Design</p>
+      <i class="fa fa-binoculars w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Scouting</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
     </div>
     <div class="w3-quarter">
