--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@ body, html {
     <div class="w3-quarter">
       <i class="fa fa-binoculars w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Scouting</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      <p>Once your payment arrives, one of our experts will start to follow your target. Once they find a good opportunity...</p>
     </div>
     <div class="w3-quarter">
-      <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">Support</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+      <i class="fa fa-crosshairs w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Boom.</p>
+      <p>Now there's one less person in the world. And hopefully you feel satisfied with your purchase.</p>
     </div>
   </div>
 </div>
