--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body, html {
       <a href="#about" class="w3-bar-item w3-button"><i class="fa fa-info-circle"></i> ABOUT</a>
       <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> TEAM</a>
       <a href="#stats" class="w3-bar-item w3-button"><i class="fa fa-bar-chart"></i> STATS</a>
-      <a href="#pricing" class="w3-bar-item w3-button"><i class="fa fa-usd"></i> PRICING</a>
+      <a href="#stats" class="w3-bar-item w3-button"><i class="fa fa-bar-chart"></i> PRICING</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
