--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ body, html {
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button"><i class="fa fa-info-circle"></i> ABOUT</a>
-      <a href="#team" class="w3-bar-item w3-button"><i class="fa fa-user"></i> TEAM</a>
+      <a href="#mission" class="w3-bar-item w3-button"><i class="fa fa-user"></i> MISSION</a>
+      <a href="#reviews" class="w3-bar-item w3-button"><i class="fa fa-th"> REVIEWS</i> </a>
       <a href="#stats" class="w3-bar-item w3-button"><i class="fa fa-bar-chart"></i> STATS</a>
-      <a href="#stats" class="w3-bar-item w3-button"><i class="fa fa-bar-chart"></i> PRICING</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -107,7 +107,7 @@ body, html {
 </div>
 
 <!-- Promo Section - "We know design" -->
-<div class="w3-container w3-light-grey" style="padding:128px 16px">
+<div class="w3-container w3-light-grey" style="padding:128px 16px" id="mission">
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>Our Mission</h3>
@@ -195,7 +195,7 @@ body, html {
 
 
 <!-- Skills Section -->
-<div class="w3-container w3-light-grey w3-padding-64">
+<div class="w3-container w3-light-grey w3-padding-64" id="stats">
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>Our Statistics.</h3>
