--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body, html {
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button"><i class="fa fa-info-circle"></i> ABOUT</a>
       <a href="#mission" class="w3-bar-item w3-button"><i class="fa fa-user"></i> MISSION</a>
-      <a href="#reviews" class="w3-bar-item w3-button"><i class="fa fa-th"> REVIEWS</i> </a>
+      <a href="#reviews" class="w3-bar-item w3-button"><i class="fa fa-th"></i> REVIEWS</a>
       <a href="#stats" class="w3-bar-item w3-button"><i class="fa fa-bar-chart"></i> STATS</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
     </div>
