--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@ body, html {
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
-    <img href="images/IMG_1222.png" style="left: 120px;">
-    <span class="w3-jumbo w3-hide-small">HitCo</span><br>
+    <span class="w3-jumbo w3-hide-small">HitCo<img href="images/></span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium">HitCo</span><br>
     <span class="w3-large">Stop wasting valuable time doing the job yourself.</span>
     <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Get rid of someone today!</a></p>
