--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ body, html {
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
         <div class="w3-container">
-          <h3>Eddie McBrien</h3>
+          <h3>Abe Christensen</h3>
           <p class="w3-opacity">Procrastinator</p>
           <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> <a href="#contact">Contact</a></button></p>
@@ -220,7 +220,7 @@ body, html {
   </div>
 </div>
 <!-- Contact Section -->
-<div class="w3-container w3-light-grey w3-padding-64" style="padding:128px 16px" id="contact">
+<div class="w3-container w3-dark-grey w3-padding-64" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
   <div style="margin-top:48px">
