--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@ body, html {
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
         <div class="w3-container">
-          <h3>Abe Christensen</h3>
+          <h3>Nick Jackelen </h3>
           <p class="w3-opacity">Procrastinator</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p>9.5/10 They called me short, now they're dead.</p>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> <a href="#contact">Contact</a></button></p>
         </div>
       </div>
