--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ body, html {
     </div>
     <div class="w3-col m6">
       <img class="w3-image w3-round-large" src="/images/IntAd.jpg" alt="int ad" width="700" height="394">
-      <iframe width="500" height="350" src="https://www.youtube.com/embed/oNHp0Ru-Zlg?si=OFaRj4_ov8j0aC0D" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      <iframe src="https://drive.google.com/file/d/1ufy9fbNwuRSFgswp5VCirUVK-uNXfGdz/preview" width="640" height="480" allow="autoplay"></iframe>
     </div>
   </div>
 </div>
