--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@ body, html {
       <h3>Our Mission</h3>
       <p>It's common knowledge that the <i>Dark Web</i> isn't the safest place to buy things.
          Your personal info get's leaked, the feds arrest you, so many unwanted consequences! That's 
-         where we come in. HitCo is the leader in safety when it comes to hiring contract killers. We
+         where we come in. HitCo is the leader in safety when it comes to hiring hitmen. We
          keep your information on the normal web, where it can't be stolen as easily, but still providing
          better access than our competitors.</p>
       <p><a href="#reviews" class="w3-button w3-black"><i class="fa fa-th"></i> Reviews</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="/images/IntAd.jpg" alt="int ad" width="700" height="394">
+      <img class="w3-image w3-round-large" src="/images/IMG_1224.jpeg" alt="int ad" width="700" height="394">
       <iframe src="https://drive.google.com/file/d/1ufy9fbNwuRSFgswp5VCirUVK-uNXfGdz/preview" width="640" height="480" allow="autoplay"></iframe>
     </div>
   </div>
@@ -145,7 +145,7 @@ body, html {
         <div class="w3-container">
           <h3>Nick Jackelen </h3>
           <p class="w3-opacity">Procrastinator</p>
-          <p>9.5/10 They called me short, now they're dead.</p>
+          <p>9.5/10 They called me short, now they're gone.</p>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> <a href="#contact">Contact</a></button></p>
         </div>
       </div>
