--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body, html {
     <div class="w3-quarter">
       <i class="fa fa-crosshairs w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Boom.</p>
-      <p>Now there's one less person in the world. And hopefully you feel satisfied with your purchase.</p>
+      <p>Now there's one less person you know. And hopefully you feel satisfied with your purchase.</p>
     </div>
   </div>
 </div>
