--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ body, html {
         <div class="w3-container">
           <h3>Anonymous</h3>
           <p class="w3-opacity">REDACTED</p>
-          <p>0/10. I can't call a hit on myself???</p>
+          <p>0/10. I can't call a hit on myself??? They stole my money!</p>
           <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> <a href="#contact">Contact</a></button></p>
         </div>
       </div>
@@ -234,7 +234,7 @@ body, html {
       <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
       <p>
-        <button class="w3-button w3-black" onclick="alert('You though this would work? Go kill someone yourself.')" type="submit">
+        <button class="w3-button w3-black" onclick="alert('You though this would work?')" type="submit">
           <i class="fa fa-paper-plane"></i> GET RID OF SOMEONE TODAY!
         </button>
       </p>
