--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@ body, html {
       <p><a href="#reviews" class="w3-button w3-black"><i class="fa fa-th"></i> Reviews</a></p>
     </div>
     <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="/images/IMG_1224.jpeg" alt="int ad" width="700" height="394">
+      <figure>
+      <figcaption>Print Ad</figcaption>
+      <img class="w3-image w3-round-large" src="/images/IMG_1224.jpeg" alt="int ad" width="350" height="148">
+      </figure>
       <iframe src="https://drive.google.com/file/d/1ufy9fbNwuRSFgswp5VCirUVK-uNXfGdz/preview" width="640" height="480" allow="autoplay"></iframe>
     </div>
   </div>
